layout bug fix

--- a/styles.css
+++ b/styles.css
@@ -477,11 +477,6 @@ footer {
         font-size: 16px;
     }
 
-    & ul li#commit-date {
-        text-align: right;
-        width: 180px;
-    }
-
     & a {
         color: #333333;
     }
